Refactored filtering; Fixed issue with results count incorrect for multiple active filters; Fixed issue with nodes_list not showing results if was searched during load

--- a/openbudget/apps/projects/static/projects/explorer/css/globals.css
+++ b/openbudget/apps/projects/static/projects/explorer/css/globals.css
@@ -83,6 +83,10 @@ svg {
     white-space: nowrap;
 }
 
+.invisible {
+    visibility: hidden !important;
+}
+
 .section_description {
     font-size: 1.3em;
     font-weight: bold;
