--- a/openbudget/apps/projects/static/projects/explorer/css/main-section.css
+++ b/openbudget/apps/projects/static/projects/explorer/css/main-section.css
@@ -42,7 +42,7 @@
 #entities_list li:hover {
     background-color: #ffffcd;
 }
-#entities_list li.search_removed {
+#entities_list li.removed {
     height: 0;
     padding: 0;
     border-bottom: none;
