--- a/openbudget/apps/projects/static/projects/explorer/css/nodes.css
+++ b/openbudget/apps/projects/static/projects/explorer/css/nodes.css
@@ -211,3 +211,7 @@
     font-size: 1.3rem;
     font-weight: bold;
 }
+
+#selected_crumb {
+    top: -1rem;
+}
